faz menu de navegacao

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrevista: Eleutério Cunha - Analista de Negócios em TI</title>
+    <title>Entrevista - Eleutério Cunha</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 
 </head>
@@ -12,23 +12,31 @@
 <body>
 
     <header class="cabecalho">
-    <a href="index.html" class="logo" aria-label="Voltar à página inicial">Entrevista Já!</a>
-    <nav>
-        <ul class="menu-navegacao">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Todas as Entrevistas</a></li>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Contato</a></li>
-        </ul>
-    </nav>
+    <nav class="menu-navegacao">
+    <ul>
+        <li>
+            <a href="index.html">
+                <span role="img" aria-label="Home">🏠</span> Home
+            </a>
+        </li>
+        <li>
+            <a href="./pages/sobre.html">
+                <span role="img" aria-label="Pessoa">👤</span> Sobre o Entrevistado
+            </a>
+        </li>
+        <li>
+            <a href="./pages/entrevista.html">
+                <span role="img" aria-label="Globo">🌐</span> Entrevista Completa
+            </a>
+        </li>
+    </ul>
+</nav>
 </header>
 
     <main class="container artigo-entrevista">
 
         <article>
             <h1 class="titulo-entrevista">Entrevista com o Analista de Negócios: Eleutério Cunha e o Futuro da TI</h1>
-            <p class="meta-data">Por: Pedro Henrique Brito de Castro da Cunha | Data: 21/10/2025 | Área: TI (Tecnologia
-                da Informação)</p>
             <hr>
 
             <section class="entrevistado-info">
@@ -45,11 +53,6 @@
 
             <hr>
 
-            <section class="leia-mais">
-                <h3>Quer se inspirar mais?</h3>
-                <a href="#" class="btn-ler-mais">Veja Todas as Entrevistas de TI</a>
-            </section>
-
         </article>
 
     </main>
@@ -57,35 +60,21 @@
     <footer class="rodape" role="contentinfo">
     <div class="rodape-conteudo">
         <div class="rodape-col">
-            <a class="logo" href="index.html" aria-label="Voltar à página inicial">Entrevista Já!</a>
-            <p class="rodape-descricao">Conteúdo sobre carreiras em TI, entrevistas e inspiração para quem está começando.</p>
-        </div>
-
-        <div class="rodape-col">
-            <h4>Links</h4>
-            <ul class="rodape-links" aria-label="Links do rodapé">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Todas as Entrevistas</a></li>
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
-            </ul>
-        </div>
-
-        <div class="rodape-col">
             <h4>Contato</h4>
-            <p>Email: <a href="mailto:contato@entrevistaja.example">contato@entrevistaja.example</a></p>
-            <p>Telefone: <a href="tel:+5511999999999">+55 (11) 99999-9999</a></p>
+            <p>Email: <a href="mailto:contato@entrevistaja.example">pedro.h.cunha16@aluno.senai.br</a></p>
+            <p>Telefone: <a href="tel:+5511999999999">+55 (19) 99953-4413</a></p>
             <div class="rodape-redes">
-                <a href="#" aria-label="Instagram">Instagram</a> ·
-                <a href="#" aria-label="LinkedIn">LinkedIn</a>
+                <a href="https://www.instagram.com/_phbritoo/" aria-label="Instagram">Instagram</a> ·
+                <a href="https://www.linkedin.com/in/pedrobritocunha/" aria-label="LinkedIn">LinkedIn</a> . 
+                <a href="https://github.com/PedrohBrito" aria-label="GitHub">GitHub</a>
             </div>
         </div>
     </div>
 
     <div class="rodape-legal">
-        <p>&copy; 2025 Entrevista Já! | Todos os direitos reservados.</p>
+        <p>&copy; Outubro de 2025 | Todos os direitos reservados.</p>
         <nav aria-label="Informações legais">
-            <a href="#">Política de Privacidade</a> · <a href="#">Termos de Uso</a>
+            <a href="">Política de Privacidade</a> · <a href="">Termos de Uso</a>
         </nav>
         <button type="button" class="btn-voltar-topo" aria-label="Voltar ao topo" onclick="window.scrollTo({top:0, behavior:'smooth'})">
             Voltar ao topo
