feat: faz pagina entrevista completa, arruma erros, meche no footer, muda imagem do entrevistado

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Entrevista - Eleutério Cunha</title>
+    <title>Entrevista | Eleutério Cunha</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 
 </head>
@@ -16,8 +16,11 @@
     <ul>
         <li>
             <a href="index.html">
+                <li class="active"><a href="./index.html">
                 <span role="img" aria-label="Home">🏠</span> Home
+                </a></li>
             </a>
+           
         </li>
         <li>
             <a href="./pages/sobre.html">
@@ -25,7 +28,7 @@
             </a>
         </li>
         <li>
-            <a href="./pages/entrevista.html">
+            <a href="./pages/contato.html">
                 <span role="img" aria-label="Globo">🌐</span> Entrevista Completa
             </a>
         </li>
@@ -35,23 +38,17 @@
 
     <main class="container artigo-entrevista">
 
-        <article>
-            <h1 class="titulo-entrevista">Entrevista com o Analista de Negócios: Eleutério Cunha e o Futuro da TI</h1>
-            <hr>
+        <div class="container">
+        <h1> Perfil Profissional: Analista de Negócios de TI </h1>
 
-            <section class="entrevistado-info">
-                <img src="./assets/img/foto-profissional.png" alt="Foto de Eleutério Cunha">
-                <h2>Eleutério Cunha: Trajetória na Tecnologia</h2>
-                <p>Eleutério Cunha tem 52 anos e atua como Analista de Negócios na área de TI. Desde a adolescência, seu
-                    interesse em montar computadores o levou à carreira, focando na gestão. Atualmente, ele trabalhou na
-                    Gol Linhas Aéreas. Esta entrevista visa inspirar jovens a escolherem sua profissão
-                    no futuro.</p>
-            </section>
+        <h2> Apresentação</h2>
+        <p>Bem-vindo a este projeto dedicado a explorar a carreira de <strong>Analista de Negócios de TI</strong>. Através de uma entrevista detalhada, investigamos a trajetória, os desafios e as recompensas de uma profissão dinâmica e crucial para o mercado moderno.</p>
+        
+        <hr>
 
-            <hr style="clear: both;">
-
-
-            <hr>
+        <h2> A Importância da Área</h2>
+        <p>A função de <strong>Analista de Negócios de TI</strong> é uma das mais estratégicas e cruciais dentro do ecossistema corporativo moderno, especialmente em ambientes que buscam a transformação digital e dependem da tecnologia para inovar. Serve como a <strong>ponte essencial</strong> entre o lado do <strong>Negócio</strong> (que sabe o que precisa ser resolvido) e o lado da <strong>Tecnologia</strong> (que sabe como construir a solução). Ele é o profissional que <strong>dá forma</strong> à visão, <strong>define a direção</strong> da solução técnica e <strong>assegura que o investimento em tecnologia</strong> realmente contribua para os objetivos financeiros e operacionais da empresa. Um <strong>consultor interno estratégico</strong>.</p>
+    </div>
 
         </article>
 
@@ -61,6 +58,7 @@
     <div class="rodape-conteudo">
         <div class="rodape-col">
             <h4>Contato</h4>
+            <p>Pedro Henrique B. C. Cunha</p>
             <p>Email: <a href="mailto:contato@entrevistaja.example">pedro.h.cunha16@aluno.senai.br</a></p>
             <p>Telefone: <a href="tel:+5511999999999">+55 (19) 99953-4413</a></p>
             <div class="rodape-redes">
