corrigi erro index

--- a/index.html
+++ b/index.html
@@ -14,19 +14,18 @@
     <header class="cabecalho">
     <nav class="menu-navegacao">
     <ul>
-        <li>
-            <a href="index.html">
-                <li class="active"><a href="./index.html">
+        <li class="active">
+            <a href="./index.html">
                 <span role="img" aria-label="Home">🏠</span> Home
-                </a></li>
             </a>
-           
         </li>
+
         <li>
             <a href="./pages/sobre.html">
                 <span role="img" aria-label="Pessoa">👤</span> Sobre o Entrevistado
             </a>
         </li>
+
         <li>
             <a href="./pages/contato.html">
                 <span role="img" aria-label="Globo">🌐</span> Entrevista Completa
@@ -34,6 +33,7 @@
         </li>
     </ul>
 </nav>
+
 </header>
 
     <main class="container artigo-entrevista">
