--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrevista | Eleutério Cunha</title>
+    <link rel="icon" type="image/png" href="assets/img/icone-site.jpg">
     <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
