--- a/pages/contato.html
+++ b/pages/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>entrevista | Eleutério</title>
+    <link rel="icon" type="image/png" href="../assets/img/icone-site.jpg">
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
