--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrevista | Eleutério Cunha</title>
-    <link rel="icon" type="image/png" href="../assets/img/icone-site.jpg">
-    <link rel="stylesheet" href="../assets/css/style.css">
 
+    <!-- Ícone da aba -->
+    <link rel="icon" type="image/png" href="../assets/img/icone-site.jpg">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 
 <body>
@@ -15,18 +18,23 @@
     <header class="cabecalho">
         <nav class="menu-navegacao">
             <ul>
-                <li><a href="../index.html"><span role="img" aria-label="Home">🏠</span> Home</a></li>
-
-                <li class="active">
-                    <a href="../pages/sobre.html">
-                        Sobre o Entrevistado
-                        <span role="img" aria-label="Pessoa" class="nav-icon">👤</span>
+                <li>
+                    <a href="../index.html">
+                        <span role="img" aria-label="Home">🏠</span> Home
                     </a>
                 </li>
 
-                <li><a href="../pages/contato.html">
-                    <span role="img" aria-label="Globo">🌐</span> Entrevista Completa
-                </a></li>
+                <li class="active">
+                    <a href="../pages/sobre.html">
+                        <span role="img" aria-label="Pessoa">👤</span> Sobre o Entrevistado
+                    </a>
+                </li>
+
+                <li>
+                    <a href="../pages/contato.html">
+                        <span role="img" aria-label="Globo">🌐</span> Entrevista Completa
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -34,18 +42,23 @@
     <main class="container artigo-entrevista">
 
         <article>
-            <h1 class="titulo-entrevista">Em TI, cada linha de código é uma chance de criar o futuro.</h1>
+            <h1 class="titulo-entrevista">
+                Em TI, cada linha de código é uma chance de criar o futuro.
+            </h1>
             <hr>
 
             <section class="entrevistado-info">
                 <img src="../assets/img/foto-profissional.jpg" alt="Foto de Eleutério Cunha">
-                <p>Eleutério Cunha tem 52 anos e atua como Analista de Negócios na área de TI. Desde a adolescência, seu interesse em montar computadores o levou à carreira, focando na gestão. Atualmente, ele trabalhou na Gol Linhas Aéreas. Esta entrevista visa inspirar jovens a escolherem sua profissão no futuro.</p>
+
+                <p>
+                    Eleutério Cunha tem 52 anos e atua como Analista de Negócios na área de TI. Desde a adolescência,
+                    seu interesse em montar computadores o levou à carreira, focando na gestão. Atualmente, ele
+                    trabalhou na Gol Linhas Aéreas. Esta entrevista visa inspirar jovens a escolherem sua profissão
+                    no futuro.
+                </p>
             </section>
 
-            <hr style="clear: both;">
-
             <hr>
-
         </article>
 
     </main>
@@ -54,8 +67,8 @@
         <div class="rodape-conteudo">
             <div class="rodape-col">
                 <h4>Contato</h4>
-                <p>Email: <a href="mailto:contato@entrevistaja.example">pedro.h.cunha16@aluno.senai.br</a></p>
-                <p>Telefone: <a href="tel:+5511999999999">+55 (19) 99953-4413</a></p>
+                <p>Email: <a href="mailto:pedro.h.cunha16@aluno.senai.br">pedro.h.cunha16@aluno.senai.br</a></p>
+                <p>Telefone: <a href="tel:+5519999534413">+55 (19) 99953-4413</a></p>
 
                 <div class="rodape-redes">
                     <a href="https://www.instagram.com/_phbritoo/" aria-label="Instagram">Instagram</a> ·
@@ -67,12 +80,14 @@
 
         <div class="rodape-legal">
             <p>&copy; Outubro de 2025 | Todos os direitos reservados.</p>
+
             <nav aria-label="Informações legais">
-                <a href="">Política de Privacidade</a> · <a href="">Termos de Uso</a>
+                <a href="#">Política de Privacidade</a> ·
+                <a href="#">Termos de Uso</a>
             </nav>
 
             <button type="button" class="btn-voltar-topo" aria-label="Voltar ao topo"
-                onclick="window.scrollTo({top:0, behavior:'smooth'})">
+                onclick="window.scrollTo({ top:0, behavior:'smooth' })">
                 Voltar ao topo
             </button>
         </div>
